--- a/index.html
+++ b/index.html
@@ -1,41 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Para mi amor V.A.M.A❤️</title>
-  <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Dancing+Script|Parisienne|Sacramento|Allura|Satisfy|Tangerine" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>¿Quieres ser mi Valentín?</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-<div class='wrapper'>
-  <div class='plant'>
-    <div class='flower'>
-      <div class='head'>
-        <div class='face'></div>
-      </div>
+<body background="fondo.gif">
+    <div class="container">
+        <h1>¿Quieres ser mi Valentín?</h1>
+        <div class="buttons">
+            <button class="yes-button" onclick="handleYesClick()">Si</button>
+            <button class="no-button" onclick="handleNoClick()">No</button>
+        </div>
+        <div class="gif_container">
+            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute GIF">
+        </div>
     </div>
-    <div class='leaf__one'></div>
-    <div class='leaf__two'></div>
-    <div class='leaf__three'></div>
-  </div>
-  <div class='pot'>
-    <div class='top'></div>
-  </div>
-  <div class='text'> Lin de mi vida Quieres ser mi San Valentín?🌻❤️
-    <br>
-  </div>
-  
-  <div class="download-section">
-    <a href="./Carta.pdf" download="Carta.pdf">
-      <button>Carta 📩</button>
-    </a>
-  </div>
-</div>
-<div class='whitespace'></div>
-
-<script src="script.js"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
